login with email instead username